LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Change__c/Top_150_Change__c.object-meta.xml
<CustomObject>
    <description>Tracks how many Top 150 changes were performed by BDRs/MDRs each month</description>
    <label>Top 150 Change</label>
    <nameField>
        <displayFormat>TOP150-{000000}</displayFormat>
        <label>Top 150 Change Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 150 Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>