LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Change__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Top 150 Changes</relationshipLabel>
    <relationshipName>Top_150_Changes_del1</relationshipName>
    <type>Lookup</type>
</CustomField>