LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Change__c/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Top_150_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>