LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Change__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>